[package]
name = "gbem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
bitmatch = "0.1.1"
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }
duplicate = "1.0.0"
bitflags = "1.2.1"

sdl2 = "0.35.2"
clap = { version = "4.3.2", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10.5"
